fixed mobile/tablet nav bar formatting and page spacing

--- a/Carousel.css
+++ b/Carousel.css
@@ -136,3 +136,11 @@ a {
   border-top: 1px solid black;
   margin: 50px auto 0 auto;
 }
+
+@media screen and (max-width: 800px) {
+
+  .page-container {
+    padding-top: 265px;
+  }
+
+}
