--- a/common.css
+++ b/common.css
@@ -182,7 +182,7 @@ footer {
 
 
 /* media queries */
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
 
   body,
   nav,
