--- a/contact_style.css
+++ b/contact_style.css
@@ -123,8 +123,13 @@ input {
   width: max-content;
 }
 
-@media screen and (max-width: 600px) {
+@media screen and (max-width: 800px) {
   iframe {
     width: 100%;
   }
+
+  .home {
+    padding-top: 265px;
+  }
+
 }
